--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -61,3 +61,17 @@ a {
 .fa:active {
 	color: #555;
 }
+
+.ui-slider-horizontal .ui-slider-handle{
+	margin-left: 0;
+}
+
+.ui-slider .ui-slider-handle{
+	width: 1px;
+	border: 1px solid #770000;
+
+}
+
+.tds-slider {
+	margin-top:10px;
+}
