--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -67,11 +67,21 @@ a {
 }
 
 .ui-slider .ui-slider-handle{
-	width: 1px;
-	border: 1px solid #770000;
+	width: 4px;
+	border: 4px solid #770000;
 
 }
 
 .tds-slider {
 	margin-top:10px;
+}
+
+.bottom-row
+{
+    margin-top: 23px;
+}
+
+.slider-control{
+	border: none;
+	background: #fff;
 }
